changed the background and footer colors

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-  background: #09ece1;
+  background: #c7fdfb;
 }
 
 h1,
@@ -20,5 +20,5 @@ footer {
 
 footer a {
   margin: 0 10px;
-  color: rgb(10, 76, 175);
+  color: rgb(250, 166, 10);
 }
